lab3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-l3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-l3
  template:
    metadata:
      labels:
        app: frontend-l3
    spec:
      containers:
        - name: frontend-l3
          image: ifilyaninitmo/itdt-contained-frontend:master
          ports:
            - containerPort: 3000
              name: http
