lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: frontend-l3
