lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-l3
spec:
  tls:
    - hosts:
        - tfayzullinlab3.com
      secretName: secret-tls
  rules:
    - host: tfayzullinlab3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  name: http
